# eks-manager

./: Dockerfile  EXAMPLES.md  README.md  config.yaml  eks.py  pyproject.toml  setup.py
app/: eks.py  setup.py
app/manager/: aws.py
config/dev/us-east-1/lab-dev-us-east-1-lab-cluster/: cluster-lab-1-24.yaml  idmap-rdickinson.yaml
eks/: eks.py
eks/manager/: aws.py  template.py  utils.py
jobs/: cluster-create-minimal.yaml  cluster-delete.yaml  connectivity-check.yaml  create-cluster-full.yaml  create-cluster-minimal.yaml
manager/: aws.py  template.py  utils.py
