[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "eks-manager"
version = "0.2.0"
description = "A CLI tool for managing EKS clusters"
authors = [
    {name = "ryan", email = "your.email@example.com"}
]
dependencies = [
    "click",
    "boto3",
    "botocore",
    "kubernetes",
    "PyYAML",
    "python-dateutil",
    "requests",
]
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]

[project.scripts]
eks = "eks.eks:cli"

[tool.setuptools]
packages = ["eks", "eks.manager"]
